# bbTrans

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  dispBBiterationStats.py  dispTestBounds.py  tobuild.txt
include/bbTrans/: bound.h  box.h  branch_and_bound.h  branch_and_bound_impl.h  combinations.h  lower_bound_Lin.h  lower_bound_Lin_impl.hpp  lower_bound_R3.h  lower_bound_S3.h  lower_bound_TpS3.h  node.h  node_AA.h  node_Lin.h  node_R3.h  node_S3.h  node_TpS3.cpp  node_TpS3.h  node_impl.h  normal.h  normal_impl.h  numeric_helpers.h  s3_tessellation.h  tetrahedron.h  upper_bound_Lin.h  upper_bound_Lin_impl.hpp  upper_bound_convex_R3.h  upper_bound_convex_S3.h  upper_bound_convex_TpS3.h  upper_bound_indep_Lin.h  upper_bound_indep_R3.h  upper_bound_indep_S3.h  upper_bound_indep_TpS3.h  vmf.h  vmf_impl.h  vmf_mm.h  vmf_mm_impl.h
include/optRot/: bound.h  box.h  branch_and_bound.h  branch_and_bound_impl.h  combinations.h  lower_bound_R3.h  lower_bound_S3.h  lower_bound_log.h  node.h  node_R3.h  node_S3.h  node_impl.h  normal.h  normal_impl.h  numeric_helpers.h  quaternion.h  s3_tesselation.h  s3_tessellation.h  tetrahedron.h  upper_bound_convex_R3.h  upper_bound_convex_S3.h  upper_bound_convexity_log.h  upper_bound_indep_R3.h  upper_bound_indep_S3.h  upper_bound_log.h  vmf.h  vmf_impl.h  vmf_mm.h  vmf_mm_impl.h
julia/: branchAndBound.jl  discretized4dSphere.jl
python/: colors.py  discretized3dSphere.py  discretized4dSphere.py  dispPolygoneAndPoints.py  plotNumberOfIterations.py  plotTetrahedronAngleBounds.py  project4d.py  project4d_600cell.py  quaternion.py  rotations.py  testGaussianMMBounds.py  testUpperBound1.py  testUpperBound2.py  testvMFBBbounds.py  vMFMM.py  vMFbranchAndBound.py  vMFgradientDescent.py  vMFrotOptComparison.py
src/: box.cpp  branch_and_bound.cpp  combinations.cpp  lower_bound_R3.cpp  lower_bound_S3.cpp  lower_bound_TpS3.cpp  lower_bound_log.cpp  node.cpp  node_AA.cpp  node_Lin.cpp  node_R3.cpp  node_S3.cpp  node_TpS3.cpp  numeric_helpers.cpp  s3_tessellation.cpp  tetrahedron.cpp  upper_bound_convex_R3.cpp  upper_bound_convex_S3.cpp  upper_bound_convex_TpS3.cpp  upper_bound_convexity_log.cpp  upper_bound_indep_R3.cpp  upper_bound_indep_S3.cpp  upper_bound_indep_TpS3.cpp  upper_bound_log.cpp
test/: bounds.cpp  bounds_R3.cpp  bounds_S3.cpp  branch_and_bound.cpp  branch_and_bound_AA.cpp  branch_and_bound_R3.cpp  branch_and_bound_S3.cpp  branch_and_bound_T3.cpp  branch_and_bound_TpS3.cpp  combinations.cpp  min_max_in_box.cpp  min_max_in_tetrahedron.cpp  s3_lin_tessellation.cpp  s3_tessellation.cpp
